# Simple-G2O-Optimization-Visualizer

./: CMakeLists.txt  README.md  package.xml
include/pose_graph_optimization/: pose_graph_optimization.hpp
src/: pose_graph_optimization.cpp  pose_graph_optimization_node.cpp
